// Copyright (c) The Libra Core Contributors
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package network;

// Discovery message exchanged as part of the discovery protocol.
// The discovery message sent by a peer consists of notes for all the peers the
// sending peer knows about.
message DiscoveryMsg { bytes message = 1; }
